Bug 1279693 - Add the Win7 version of himalaya.ttf to the GDEF blacklist in harfbuzz. r=jrmuizel a=jcristau

--HG--
extra : source : a467f9800f8dc0b48dca0e9a4121b43681cab71a